# Eda-processing

./: .gitattributes  .gitignore  01_filter_cancelled.py  02_check_decimals.py  02_check_float_to_int.py  02_convert_types.py  03_analyze_importance.py  04_feature_engineering_basic.py  04_transport_features.py  05_check_cat_missing.py  05_cleanup_categorical.py  06_finalize_columns.py  07_select_features.py  09_9_compare_public_vs_kakao.py  09_comparison_report.ipynb  README.md  baseline_submission.csv  comprehensive_eda_preprocessing.ipynb  data.tar  experiments_summary_comprehensive.md  geocoding_process_detail.md  geocoding_process_report.ipynb  pyproject.toml  run.py  run_ensemble.py  run_pipeline_gpu.ipynb  run_train.py  run_tuning.py  summary_exp04.md  summary_exp06.md  summary_exp08.md  summary_exp09.md  summary_exp10.md  summary_exp11.md  summary_exp12.md  summary_exp12_v2.md  summary_exp13.md  summary_exp14.md  summary_exp15.md
EDA_Report_Package/: comprehensive_eda_preprocessing_report.md
Experiments/Exp01_Baseline_Coordinates/: summary_report.md
Experiments/Exp02_Validation_Correction/: summary_exp02.md
Experiments/Exp03_Building_Age/: summary_exp03.md
Experiments/Exp05_Transport_Shuffle/: summary_exp05.md
Experiments/Exp07_Quality_Features/: summary_exp07.md
models/: lightgbm_model.pkl  region_stats.pkl  target_encoder.pkl  time_lag_stats.pkl
notebooks/: preprocessing.ipynb  run_baseline_lgbm.ipynb
scripts/: run_remote.sh  setup_remote_env.sh
src/: __init__.py  config.py  main.py
src/data/: __init__.py  (+2 more)
submissions/: submission.csv
(+67 files in other folders)
