[project]
name = "house-price-prediction"
version = "0.1.0"
description = "서울 아파트 실거래가 예측 프로젝트"
requires-python = ">=3.12, <3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plt>=0.2.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    "hdbscan>=0.8.0",
]

[project.scripts]
preprocess = "preprocessing.run_preprocessing:main"
train = "modeling.run_training:main"

[tool.setuptools.packages.find]
where = ["src"]
